added seperate playbook for linux and win server

--- a/ansible-scripting/test1.yaml
+++ b/ansible-scripting/test1.yaml
@@ -1,6 +1,6 @@
 ---
-- name: Test playbook
-  hosts: testservers
+- name: Test playbook 1
+  hosts: linuxservers
   vars:
     mode: "list"
     iteration:
