--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 ant-scripting/build/**
 .DS_Store
+
+# Terraform ignore
+terraform-kubernetes/.terraform/*
+terraform-kubernetes/*.tfstate*
+terraform-kubernetes/crash.log
+
+# Kubernetes ignore
+terraform-kubernetes/kubeconfig*
